fix error ServiceImp, add some method, fix bug tests